refactor: Fase 1 (quick wins) + Fase 2 (arquitectura hexagonal)
Fase 1 — Quick Wins:
- GET /documents deja de serializar el binario (DocumentSummary + proyeccion paginada)
- Virtual threads + timeout + shutdown en QuestionService
- Score de similitud real (distancia PGVector) en vez de 0.99 fijo
- ORDER BY determinista en visualizacion; show-sql/logging a INFO
- Polling del frontend se detiene sin documentos en proceso
- Eliminado codigo muerto (SimpleMultipartFile, DocumentChunk, actuator inerte)
- QuestionServiceTest reparado (build verde)

Fase 2 — Refactorizacion arquitectonica (sin cambiar endpoints ni comportamiento):
- A3: agregado Document rico con transiciones de estado encapsuladas
- A2: SQL/JdbcClient salen de application hacia PgVectorChunkAdapter (ports out)
- A1: application deja de depender de api.dto (commands/results propios + mappers)
- SRP: ClusteringService dividido en KMeansClusterer, LlmClusterNamingAdapter,
  PcaProjector y ClusterPalette, todos tras puertos
- A4: eliminada entidad/repo JPA fantasma de chunks; PGVectorStore como unico
  dueno; borrado por metadata (corrige chunks huerfanos)
- B4: asignacion de clusters O(n) con IndexedPoint (corrige bug con duplicados)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>